--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="owl.carousel.css">
+    <link rel="stylesheet" href="owl.theme.default.css">
     <title>Artwork</title>
   </head>
 
@@ -122,8 +124,8 @@
       <a class="acreate" href="#">Create Account</a>
       <br><br><br><br><br><br><br>
     </div>
-    <div class="partners">
-      <h3>Our <span class="marp">Official Partner</span></h3><br>
+    <div class="partners"><br>
+      <h3>Our <span class="marp">Official Partners:</span></h3><br>
       <a href="#">
         <img src="" alt="">
       </a>
@@ -131,6 +133,45 @@
         <img src="Patek-Philippe-logo.png" alt="">
       </a>
     </div>
+    <div class="wrapper">
+      <div class="owl-carousel">
+          <div class="item">
+            <a href="https://www.adidas.com/us"></a>
+            <img src="1920x1080-white-background_7654.jpg" alt="">
+          </div>
+          <div class="item">
+            <a href="https://www.converse.com/">
+              <img src="wp2642097.jpg" alt="">
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://www.spotify.com/" target="_blank">
+              <img src="image-14.jpeg" alt="">
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://www.levi.com/US/en_US/">
+              <img src="LEVI-1920-WEB_20190321.png" alt="">
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://www.stussy.com/">
+              <img src="4fc52df8c70c3e4a2c929c603b328648.jpg" alt="">
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://undefeated.com/">
+              <img src="skull-logo-monochrome-minimalism-wallpaper.jpg" alt="">
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://reebok.com/">
+              <img src="wp1836122.jpg" alt="">
+            </a>
+          </div>
+
+        </div>
+      </div>
     <div class="end"><br><br>
       <div class="address">
         <h4>Address: <br><p>Rua Mateus Sansão Muthemba, n° 452 -<br>
@@ -188,6 +229,9 @@
   crossorigin="anonymous"></script>
     <script type="text/javascript" src="artwork.js">
     </script>
+    <script src="owl.carousel.js"></script>
+    <script type="text/javascript" src="autoplay.js">
 
+    </script>
   </body>
 </html>
